Modify Style of ReadOnly Field

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                                                             <label for="stuName" class="col-md-3 col-sm-12 col-form-label">姓名</label>
                                                             <!-- 姓名  -->
                                                             <div class="col-md-9 col-sm-12">
-                                                                <input htmlescape="false" id="stuName" maxlength="64" name="stuName" class="form-control" readonly="true" value=" ">
+                                                                <input htmlescape="false" id="stuName" maxlength="64" name="stuName" class="form-control">
                                                                 <script> document.getElementById("stuName").value = my_stuName </script>
                                                             </div>
                                                         </div>
