--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                                             <label for="stuCollegeName" class="col-md-3 col-sm-12 col-form-label">学院</label>
                                                             <!-- 学院  -->
                                                             <div class="col-md-9 col-sm-12">
-                                                                <input htmlescape="false" id="stuCollegeName" maxlength="100" class="form-control" value=" " readonly="true">
+                                                                <input htmlescape="false" id="stuCollegeName" maxlength="100" class="form-control" value=" ">
                                                                 <script> document.getElementById("stuCollegeName").value = my_stuCollegeName </script>
                                                             </div>
                                                         </div>
